Fix overlaps and symmetry in technologies area.

--- a/index-asset/css/bootstrap4-neon-glow.css
+++ b/index-asset/css/bootstrap4-neon-glow.css
@@ -609,6 +609,8 @@ pre {
 
 .container.single-built {
     padding-left: 10px;
+    max-width: 500px;
+    height: 100%;
 }
 
 .container.single-built .col-3 {
